# surface_reconstruction

./: CMakeLists.txt  README.md
VVRFramework/include/MathGeoLib/Geometry/: AABB.h  Capsule.h  PBVolume.h  Plane.h  Polyhedron.h
VVRFramework/include/MathGeoLib/Math/: Quat.h  float4_neon.h  float4x4_neon.h  float4x4_sse.h  myassert.h  quat_simd.h
VVRFramework/include/VVRScene/: canvas.h  dsp.h  glwidget.h  logger.h  scene.h  settings.h  utils.h  window.h
extra/GeoLib 4.0/: C2DArc.h  C2DBase.h  C2DBaseSet.h  C2DCircle.h  C2DLine.h  C2DLineBase.h  C2DLineBaseSet.cpp  C2DLineBaseSet.h  C2DLineBaseSetSet.h  C2DLineSet.h  C2DPoint.cpp  C2DPoint.h  C2DPointSet.cpp  C2DPointSet.h  C2DRect.h  C2DRectSet.h  C2DRoute.h  C2DSegment.h  C2DTriangle.h  C2DVector.h  C3DPoint.h  GeoLib.rc  GeoLib.vcproj  Grid.h  IndexSet.h  Interval.h  MemoryPool.h  RandomNumber.h  Sort.h  StdAfx.h  Transformation.h  TravellingSalesman.cpp  TravellingSalesman.h
extra/GeoLib 4.0/Debug/: BuildLog.htm  vc80.idb
extra/GeoLib 4.0/Debug DLL/: BuildLog.htm  GeoLib.exp  GeoLib.lib  mt.dep  vc80.idb
extra/GeoLib 4.0/Release/: BuildLog.htm  GeoLib.res  vc80.idb
extra/GeoLib 4.0/Release DLL/: BuildLog.htm  GeoLib.exp  GeoLib.lib  mt.dep  vc80.idb
extra/VVRFramework/include/GeoLib/: StdAfx.h
extra/VVRFramework/include/MathGeoLib/: MathGeoLibFwd.h
extra/VVRFramework/include/MathGeoLib/Geometry/: GeometryAll.h  TriangleMesh.h  TriangleMesh_IntersectRay_AVX.inl  TriangleMesh_IntersectRay_SSE.inl
extra/VVRFramework/include/MathGeoLib/Math/: MathFunc.h  float4.h  float4_sse.h  float4d.h  simd.h
extra/VVRFramework/include/VVRScene/: kdtree.h  mesh.h  stdredirector.h  tiny_obj_loader.h  ui_window.h  vvrscenedll.h
src/: ImageRGB.cpp  ImageRGB.h  ImageRGBD.cpp  ImageRGBD.h  KDTree.cpp  KDTree.h  KDTree2.cpp  KDTree2.h  PointCloud.cpp  PointCloud.h  dataTypes.h  dataset.h  generic.h  kdTree.cpp  kdTree.h  kdTree2.cpp  kdTree2.h  main.cpp  surfaceReconstruction.cpp  surfaceReconstruction.h
